--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -145,10 +145,16 @@
 }
 
 @keyframes highlight {
+  /* 0% { */
+  /*   background-color: hsl(var(--primary) / 0.15); */
+  /* } */
+  /* 100% { */
+  /*   background-color: hsl(var(--primary) / 0.05); */
+  /* } */
   0% {
-    background-color: hsl(var(--primary) / 0.15);
+    background-color: hsl(45 100% 50% / 0.15); /* More saturated yellow */
   }
   100% {
-    background-color: hsl(var(--primary) / 0.05);
+    background-color: hsl(45 100% 50% / 0.05); /* Fades to lighter yellow */
   }
 }
